--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   border: 0;
+  box-sizing: border-box;
 }
