--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,6 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  text-align: center;
-  margin-top: 40px;
+  font-family: 'Manrope', sans-serif;
 }
